--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "du",
+    "name": "1578180535@qq.com",
     "description": "A short description of what your package does",
     "require": {
         "php": "^5.3.3 || ^7.0",
